Adicionando Arte Nova

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Antonio Magalaes</title>
+  <title>Antonio Magalhaes</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="preconn ect" href="https://fonts.googleapis.com">
@@ -51,8 +51,7 @@
       <div class="resizer">Desenhos</div>
       <div class="items">
         <div class="item">
-          <button type="button"
-            onclick="window.open('https://www.instagram.com/p/CcOvX-aOUKH/?img_index=1','_blank')"></button>
+          <button type="button"onclick="window.open('https://www.instagram.com/p/C7O-QHfOYXT/','_blank')"></button>
         </div>
         <div class="item">
           <button type="button" onclick="window.open('https://www.instagram.com/p/CxI3OkWuBZJ/','_blank')"></button>
@@ -61,12 +60,10 @@
           <button type=" button" onclick="window.open('https://www.instagram.com/p/C4yXTCgu009/','_blank')"></button>
         </div>
         <div class="item">
-          <button type=" button" onclick="window.open('https://www.instagram.com/p/C2un-PwOgoG/?img_index=1','_blank')">
-          </button>
+          <button type=" button" onclick="window.open('https://www.instagram.com/p/C2un-PwOgoG/?img_index=1','_blank')"></button>
         </div>
         <div class="item">
-          <button type=" button"
-            onclick="window.open('https://www.instagram.com/p/CbdAT8YO-4S/?img_index=1','_blank')"></button>
+          <button type=" button"onclick="window.open('https://www.instagram.com/p/CbdAT8YO-4S/?img_index=1','_blank')"></button>
         </div>
         <div class="item">
           <button type=" button" onclick="window.open('https://www.instagram.com/p/CqDhsUcOqVW/','_blank')"></button>
@@ -75,7 +72,7 @@
           <button type=" button" onclick="window.open('https://www.instagram.com/p/CxD2HNtujSD/?img_index=1','_blank')"></button> 
         </div>
         <div class="item">
-          <button type=" button" onclick="window.open('https://www.instagram.com/p/Czg_gI_uqJT/','_blank')"></button>
+          <button type=" button" onclick="window.open('https://www.instagram.com/p/CcOvX-aOUKH/?img_index=1','_blank')"></button>
         </div>
         <div class="item">
           <button type=" button" onclick="window.open('https://www.instagram.com/p/Cda-L2kOPDw/','_blank')"></button>
@@ -109,6 +106,9 @@
         </div>
         <div class="item">
           <button type=" button" onclick="window.open('https://www.instagram.com/p/C3ipHGYvIGH/','_blank')"></button>
+        </div>
+        <div class="item">
+          <button type=" button" onclick="window.open('https://www.instagram.com/p/Czg_gI_uqJT/','_blank')"></button>
         </div>
         <div class="item">
           <button type=" button" onclick="window.open('https://www.instagram.com/onionoyo/','_blank')"></button>
